--- a/src/static/index.html
+++ b/src/static/index.html
@@ -11,7 +11,7 @@
     <title>Todo App</title>
 </head>
 <body>
-    <h4 style="color:burlywood;">Author: Dilara on VM1</h4>
+    <h4 style="color:burlywood;">Author: Dilara. Site on VM1</h4>
     <div id="root"></div>
     <script src="js/react.production.min.js"></script>
     <script src="js/react-dom.production.min.js"></script>
